Fix bug for head tag

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
             body,h1,h5 {font-family: "Raleway", sans-serif}
             body, html {height: 100%}
         </style>
+    </head>
 </html>
