Add bodt template for adding features

--- a/index.html
+++ b/index.html
@@ -11,4 +11,16 @@
             body, html {height: 100%}
         </style>
     </head>
+    <body>
+        <div class="bgimg w3-display-container w3-text-white">
+            <div class="w3-display-topleft w3-container w3-xlarge">
+                
+            </div>
+        </div>
+    </body>
+
+    <!-- Menu Modal -->
+
+    <!-- Contact Modal -->
+     
 </html>
