--- a/index.html
+++ b/index.html
@@ -50,8 +50,19 @@
           <h5>Chicken Salad <b>$3.50</b></h5>
           <h5>Bread and Butter <b>$1.00</b></h5>
         </div>
+        <div class="w3-container w3-black">
+          <h1>Main Courses</h1>
+            </div>
+            <div class="w3-container">
+              <h5>Grilled Fish and Potatoes <b>$8.50</b></h5>
+              <h5>Italian Pizza <b>$5.50</b></h5>
+              <h5>Veggie Pasta <b>$4.00</b></h5>
+              <h5>Chicken and Potatoes <b>$6.50</b></h5>
+              <h5>Deluxe Burger <b>$5.00</b></h5>
+            </div>
       </div>
     </div>
+
 
 
     <!-- Contact Modal -->
