Add desserts to menue

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
               <h5>Chicken and Potatoes <b>$6.50</b></h5>
               <h5>Deluxe Burger <b>$5.00</b></h5>
             </div>
+        <div class="w3-container w3-black">
+          <h1>Desserts</h1>
+            </div>
+            <div class="w3-container">
+              <h5>Fruit Salad <b>$2.50</b></h5>
+              <h5>Ice cream <b>$2.00</b></h5>
+              <h5>Chocolate Cake <b>$4.00</b></h5>
+              <h5>Cheese <b>$5.50</b></h5>
+            </div>
       </div>
     </div>
 
