--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
     <div class="bgimg w3-display-container w3-text-white">
       <div class="w3-display-middle w3-jumbo">
-        <p>logo</p>
+        <p>Software Lab</p>
       </div>
       <div class="w3-display-topleft w3-container w3-xlarge">
         <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">Menue</button></p>
       </div>
       <div class="w3-display-bottomleft w3-container">
-        <p class="w3-xlarge">monday - friday 10-23 | saturday 14-02</p>
-        <p class="w3-large">42 village St, New York</p>
+        <p class="w3-xlarge">99109552-99109314-99170529</p>
+        <p class="w3-large">Tehran</p>
         <p>powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
       </div>
     </div>
