add contact button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
       <div class="w3-display-topleft w3-container w3-xlarge">
         <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">Menue</button></p>
+        <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">contact</button></p>
       </div>
       <div class="w3-display-bottomleft w3-container">
         <p class="w3-xlarge">99109552-99109314-99170529</p>
@@ -74,6 +75,14 @@
 
 
     <!-- Contact Modal -->
+    <div id="contact" class="w3-modal">
+      <div class="w3-modal-content w3-animate-zoom">
+        <div class="w3-container w3-black">
+          <span onclick="document.getElementById('contact').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+          <h1>Contact</h1>
+        </div>
+      </div>
+    </div>
      
     </body>
 </html>
