add text to cntact page

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
           <span onclick="document.getElementById('contact').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
           <h1>Contact</h1>
         </div>
+        <div class="w3-container">
+          <p>Reserve a table, ask for today's special or just send us a message:</p>
+        </div>
       </div>
     </div>
      
