add form for contact

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
         </div>
         <div class="w3-container">
           <p>Reserve a table, ask for today's special or just send us a message:</p>
+          <form target="_blank">
+            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name"></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="How many people"></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message \ Special requirements"></p>
+          </form>
         </div>
       </div>
     </div>
