--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name"></p>
             <p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="How many people"></p>
             <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message \ Special requirements"></p>
+            <p><button class="w3-button" type="submit">SEND MESSAGE</button></p>
           </form>
         </div>
       </div>
