--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         <div class="w3-container">
           <p>Reserve a table, ask for today's special or just send us a message:</p>
           <form target="_blank">
-            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name"></p>
-            <p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="How many people"></p>
-            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message \ Special requirements"></p>
-            <p><input class="w3-input w3-padding-16 w3-border" type="datetime-local" placeholder="Date and time"></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="How many people" required></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message \ Special requirements" required></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="datetime-local" placeholder="Date and time" required></p>
             <p><button class="w3-button" type="submit">SEND MESSAGE</button></p>
           </form>
         </div>
