--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required></p>
             <p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="How many people" required></p>
             <p><input class="w3-input w3-padding-16 w3-border" type="datetime-local" placeholder="Date and time" required></p>
-            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message \ Special requirements" required></p>
-            <p><button class="w3-button" type="submit">SEND MESSAGE</button></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message \ Special requirements"></p>
+            <p><button class="w3-button" type="submit">Reserve Table \ SEND MESSAGE</button></p>
           </form>
         </div>
       </div>
